JamUnityBridge/JamUnityBridge.h

enum class JAM_eResult : int32_t
{
	Ok					= 0,
	NoEvent				= 1,
	NotInitialized		= -1,
	InvalidArgument		= -2,
	NotConnected		= -3,
	BufferTooSmall		= -4,
	VersionMismatch		= -5,
	InternalError		= -6,
};
enum class JAM_eClientRequestKind : uint8_t
{
	None,
	WorldAction,
	ActorAction,
	SocialCommand,
	ContentRequest,
};
enum class JAM_eClientRequestAdmission : uint8_t
{
	Accepted,
	NotInitialized,
	NotConnected,
	InvalidArgument,
	QueueFull,
};
enum class JAM_eActorActionReason : uint8_t
{
	None,
	InvalidArgument,
	WorldUnavailable,
	ActorNotFound,
	TransportUnavailable,
	Rejected,
	Shutdown,
};
enum class JAM_eCharacterViewPolicy : uint8_t
{
	FollowMovement,
	Explicit,
};
enum class JAM_eClientEventType : uint8_t
{
	None,
	NetworkStateChanged,
	WorldParticipantChanged,
	ActorLifecycleChanged,
	WorldRayResolved,
	ActorActionRequestCompleted,
	SocialMessageReceived,
	ContentRequestCompleted,
};
enum class JAM_eContentResponseStatus : uint8_t
{
	None,
	Succeeded,
	Rejected,
	InvalidRequest,
	Unavailable,
	InternalError,
};
enum class JAM_eSocialRecipientKind : uint8_t
{
	None,
	AccountId,
	CharacterId,
	CharacterName,
};
struct JAM_ClientConfig
{
	uint32_t	structSize;
	uint32_t	abiVersion;
	const char*	serverIp;
	uint16_t	tcpPort;
	uint16_t	udpPort;
	uint64_t	accountId;
	const char*	loginId;
	const char*	password;
	const uint8_t* ticket;
	uint32_t	ticketSize;
	const char*	sharedDataManifestPath;
	int32_t		headlessMode;
};
struct JAM_ClientPumpOptions
{
	uint32_t	structSize; 
	uint64_t	maxControlEvents;
};
struct JAM_ClientPumpResult
{
	uint32_t	structSize; 
	uint64_t	appliedControlEvents; 
	uint64_t	pendingControlEvents; 
	int32_t		presentationUpdated;
};
struct JAM_NetworkState
{
	JAM_eNetworkPhase		phase;
	JAM_eBootstrapKind bootstrapKind;
};
struct JAM_WorldRef
{
	uint64_t	worldId; 
	uint64_t	worldInstanceId; 
	uint64_t	worldArchetypeKey;
};
struct JAM_ClientRequestSubmission
{
	JAM_eClientRequestAdmission		admission; 
	JAM_ClientRequestReceipt		receipt;
};
struct JAM_WorldActionCommand
{
	uint32_t				structSize; 
	JAM_eWorldActionKind	kind; 
	JAM_EnterWorldRequest	enter; 
	JAM_LeaveWorldRequest	leave;
};
struct JAM_ActorActionCommand
{
	uint32_t			structSize; 
	JAM_eActorAction	action; 
	uint64_t			worldId; 
	JAM_ActorSpawnSpec	spawn; 
	uint32_t			targetActorId;
};
struct JAM_SocialCommand
{
	uint32_t			structSize;
	JAM_SocialAddress	destination;
	uint16_t			contentType;
	const uint8_t*		payload;
	uint32_t			payloadSize;
};
struct JAM_GenericContentRequest
{
	uint32_t		structSize;
	uint64_t		operationKey;
	const uint8_t*	payload;
	uint32_t		payloadSize;
};
struct JAM_CharacterControlIntent
{
	uint32_t						structSize;
	float							moveReferenceYaw;
	float							viewYaw;
	float							viewPitch;
	JAM_eCharacterViewPolicy		viewPolicy;
	uint32_t						continuousActions;
	uint32_t						edgeActions;
	JAM_eCharacterLocomotionKind	locomotion;
	JAM_Vec3						vector;
	JAM_Vec3						rayOrigin;
	JAM_Vec3						rayDirection;
	float							maxRange;
	uint32_t						targetActorId;
};
struct JAM_ActorState
{
	uint32_t	actorId; 
	int32_t		isLocal; 
	int32_t		hasTransform; 
	JAM_Vec3	position; 
	JAM_Quat	rotation;
};
struct JAM_ActorFrame
{
	uint64_t	sequence; 
	uint32_t	tick; 
	float		timestamp; 
	int32_t		actorCount;
};
struct JAM_FrameCopyInfo
{
	uint32_t	structSize; 
	int32_t		previousRequiredCount; 
	int32_t		previousCopiedCount; 
	int32_t		currentRequiredCount; 
	int32_t		currentCopiedCount;
};
struct JAM_ClientEvent
{
	uint32_t				structSize; 
	JAM_eClientEventType	type; 
	JAM_ClientEventPayload	payload;
};
JAM_API JAM_eResult		JU_Initialize(const JAM_ClientConfig* config);
JAM_API void			JU_Shutdown();
JAM_API JAM_eResult		JU_Connect();
JAM_API void			JU_Disconnect();
JAM_API JAM_eResult		JU_Pump(const JAM_ClientPumpOptions* options, JAM_ClientPumpResult* outResult);
JAM_API uint32_t		JU_GetAbiVersion();
JAM_API JAM_eResult		JU_GetNetworkState(JAM_NetworkState* outState);
JAM_API JAM_eResult		JU_GetAccountId(uint64_t* outAccountId);
JAM_API JAM_eResult		JU_GetUserId(uint64_t* outUserId);
JAM_API JAM_eResult		JU_GetMainWorldRef(JAM_WorldRef* outWorldRef);
JAM_API JAM_eResult		JU_GetActorPresentationFramePair(uint64_t worldId, JAM_ActorState* outPreviousActors, int32_t previousCapacity, JAM_ActorFrame* outPreviousFrame, JAM_ActorState* outCurrentActors, int32_t currentCapacity, JAM_ActorFrame* outCurrentFrame, JAM_FrameCopyInfo* outInfo);
JAM_API JAM_eResult		JU_RequestWorldAction(const JAM_WorldActionCommand* command, JAM_ClientRequestSubmission* outSubmission);
JAM_API JAM_eResult		JU_RequestActorAction(const JAM_ActorActionCommand* command, JAM_ClientRequestSubmission* outSubmission);
JAM_API JAM_eResult		JU_RequestSocialCommand(const JAM_SocialCommand* command, JAM_ClientRequestSubmission* outSubmission);
JAM_API JAM_eResult		JU_RequestGenericContent(const JAM_GenericContentRequest* request, JAM_ClientRequestSubmission* outSubmission);
JAM_API JAM_eResult		JU_SubmitCharacterControl(const JAM_CharacterControlIntent* intent);
JAM_API JAM_eResult		JU_PollEvent(JAM_ClientEvent* outEvent); // Event payload pointers remain valid until the next JU_PollEvent call or JU_Shutdown.