JamUnity/Assets/JamUnity/Runtime/Core/Native/CoreNative.cs


        [StructLayout(LayoutKind.Sequential)]
        public struct WorldRayResolvedEvent
        {
            public ulong accountId;
            public ulong userId;
            public ulong worldId;
            public int hit;
            public Vec3 position;
            public Vec3 normal;
            public uint hitActorId;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct ActorActionRequestCompletedEvent
        {
            public ClientRequestReceipt receipt;
            public eActorAction action;
            public eActorActionStatus status;
            public eActorActionReason reason;
            public uint actorId;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SocialMessageReceivedEvent
        {
            public ulong accountId;
            public ulong userId;
            public ulong messageId;
            public ulong senderUserId;
            public SocialAddress destination;
            public ushort contentType;
            public IntPtr payload;
            public uint payloadSize;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct GenericContentRequestCompletedEvent
        {
            public ulong accountId;
            public ulong userId;
            public ulong requestId;
            public ulong operationKey;
            public eContentResponseStatus status;
            public uint resultCode;
            public IntPtr payload;
            public uint payloadSize;
        }

        [StructLayout(LayoutKind.Explicit, Size = 104)]
        public struct ClientEvent
        {
            [FieldOffset(0)] public uint structSize;
            [FieldOffset(4)] public eClientEventType type;
            [FieldOffset(8)] public NetworkStateChangedEvent networkStateChanged;
            [FieldOffset(8)] public WorldParticipantChangedEvent worldParticipantChanged;
            [FieldOffset(8)] public ActorLifecycleChangedEvent actorLifecycleChanged;
            [FieldOffset(8)] public WorldRayResolvedEvent worldRayResolved;
            [FieldOffset(8)] public ActorActionRequestCompletedEvent actorActionRequestCompleted;
            [FieldOffset(8)] public SocialMessageReceivedEvent socialMessageReceived;
            [FieldOffset(8)] public GenericContentRequestCompletedEvent contentRequestCompleted;
        }

        public static bool IsAvailable
        {
            get
            {
                try { return JU_GetAbiVersion() == AbiVersion; }
                catch (Exception e) when (e is DllNotFoundException || e is EntryPointNotFoundException)
                {
                    Debug.LogError($"JamUnityBridge unavailable: {e.Message}");
                    return false;
                }
            }
        }

        public static eResult Initialize(ref ClientConfig config) => JU_Initialize(ref config);
        public static void Shutdown() => JU_Shutdown();
        public static eResult Connect() => JU_Connect();
        public static void Disconnect() => JU_Disconnect();
        public static eResult Pump(ref ClientPumpOptions options, out ClientPumpResult result) => JU_Pump(ref options, out result);
        public static eResult GetNetworkState(out NetworkState state) => JU_GetNetworkState(out state);
        public static eResult GetAccountId(out ulong accountId) => JU_GetAccountId(out accountId);
        public static eResult GetUserId(out ulong userId) => JU_GetUserId(out userId);
        public static eResult GetMainWorldRef(out WorldRuntimeRef world) => JU_GetMainWorldRef(out world);
        public static eResult GetActorPresentationFramePair(ulong worldId, ActorState[] previousActors, int previousCapacity, out ActorFrame previousFrame, ActorState[] currentActors, int currentCapacity, out ActorFrame currentFrame, out FrameCopyInfo info) =>
            JU_GetActorPresentationFramePair(worldId, previousActors, previousCapacity, out previousFrame, currentActors, currentCapacity, out currentFrame, out info);
        public static eResult RequestWorldAction(ref WorldActionCommand command, out ClientRequestSubmission submission) => JU_RequestWorldAction(ref command, out submission);
        public static eResult RequestActorAction(ref ActorActionCommand command, out ClientRequestSubmission submission) => JU_RequestActorAction(ref command, out submission);
        public static eResult RequestSocialCommand(ref SocialCommand command, out ClientRequestSubmission submission) => JU_RequestSocialCommand(ref command, out submission);
        public static eResult RequestGenericContent(ref GenericContentRequest request, out ClientRequestSubmission submission) => JU_RequestGenericContent(ref request, out submission);
        public static eResult SubmitCharacterControl(ref CharacterControlIntent intent) => JU_SubmitCharacterControl(ref intent);
        public static eResult PollEvent(out ClientEvent ev) => JU_PollEvent(out ev);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern uint JU_GetAbiVersion();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_Initialize(ref ClientConfig config);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern void JU_Shutdown();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_Connect();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern void JU_Disconnect();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_Pump(ref ClientPumpOptions options, out ClientPumpResult result);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_GetNetworkState(out NetworkState state);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_GetAccountId(out ulong accountId);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_GetUserId(out ulong userId);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_GetMainWorldRef(out WorldRuntimeRef world);
    
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_GetActorPresentationFramePair(ulong worldId, [Out] ActorState[] previousActors, int previousCapacity, out ActorFrame previousFrame, [Out] ActorState[] currentActors, int currentCapacity, out ActorFrame currentFrame, out FrameCopyInfo info);
      
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern eResult JU_RequestWorldAction(ref WorldActionCommand command, out ClientRequestSubmission submission);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_RequestActorAction(ref ActorActionCommand command, out ClientRequestSubmission submission);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern eResult JU_RequestSocialCommand(ref SocialCommand command, out ClientRequestSubmission submission);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern eResult JU_RequestGenericContent(ref GenericContentRequest request, out ClientRequestSubmission submission);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern eResult JU_SubmitCharacterControl(ref CharacterControlIntent intent);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)] 
        private static extern eResult JU_PollEvent(out ClientEvent ev);
    }
}
